--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=mirathy
 server.port=8087
 
 # PostgreSQL Database
-spring.datasource.url=jdbc:postgresql://localhost:8015/postgres
-spring.datasource.username=rootuser
-spring.datasource.password=rootpass
+spring.datasource.url=psql 'postgresql://neondb_owner:npg_u3eztk8xXSnG@ep-shy-bar-a4cxreyr-pooler.us-east-1.aws.neon.tech/mirathy?sslmode=require&channel_binding=require'
+spring.datasource.username=neondb_owne
+spring.datasource.password=npg_u3eztk8xXSnG
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
