--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Application
+# application.properties
 spring.application.name=mirathy
 server.port=8087
 
@@ -24,3 +24,14 @@ app.cors.allowed-origins=*
 # Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+# Application
+application.security.miling.frontend.activation-url=http://localhost:4200/activate-account
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mostafaeid1810@gmail.com
+spring.mail.password=iskfxiidfmfauljp
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
